# kagent-a2a-discord

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  handlers.py  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
a2a/client/: card_resolver.py  client.py
a2a/server/: server.py  task_manager.py
